src/objects/ICG_Capability_Assignment_Group__c.object
<CustomObject>
    <description>One Source certification / remote validation header where relevant data is stored</description>
    <fields>
        <fullName>CEIV_Scope_List__c</fullName>
        <description>Picklist of possible values for ceiv scope</description>
        <label>CEIV Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Cargo_Facility_Operations</fullName>
                    <label>Cargo Facility Operations</label>
                </value>
                <value>
                    <fullName>Ramp_Operations</fullName>
                    <label>Ramp Operations</label>
                </value>
                <value>
                    <fullName>Administrative_And_Operational</fullName>
                    <isActive>false</isActive>
                    <label>Administrative and Operational</label>
                </value>
                <value>
                    <fullName>Cargo_Handling</fullName>
                    <isActive>false</isActive>
                    <label>Cargo Handling</label>
                </value>
                <value>
                    <fullName>Cargo_Handling_And_Ramp</fullName>
                    <isActive>false</isActive>
                    <label>Cargo Handling and Ramp</label>
                </value>
                <value>
                    <fullName>Ramp_Handling</fullName>
                    <isActive>false</isActive>
                    <label>Ramp Handling</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification_Id__c</fullName>
        <description>Describes the ID of the certification</description>
        <label>Certification Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Until_Expiration__c</fullName>
        <description>Calculates the remaining days until expiration</description>
        <formula>ROUND(Expiration_Date__c - TODAY(), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Expiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Show the expiration date of the validation</description>
        <label>Expiration Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expired_Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to track whether expired notification is sent or not</description>
        <label>Expired Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GxA_Answers_Not_Mapped_Json__c</fullName>
        <description>Answers from gxa not mapped in sf</description>
        <label>GxA Answers Not Mapped Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GxA_Error_Message__c</fullName>
        <description>Error message on integration process</description>
        <label>GxA Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GxA_Error_StackTrace__c</fullName>
        <description>Error StackTrace on integration process</description>
        <label>GxA Error StackTrace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GxA_Form_Submited_Date__c</fullName>
        <description>Describe the date when the form is submited</description>
        <label>GxA Form Submited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GxA_Integration_Status__c</fullName>
        <description>Current status of integration status process</description>
        <label>GxA Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GxA_Object_Key__c</fullName>
        <description>Store the object key in s3 aws</description>
        <label>GxA Object Key</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GxA_Result_Json__c</fullName>
        <description>Store the json structure</description>
        <label>GxA Result Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ICG_Account_Role_Detail__c</fullName>
        <description>Master detail to facility</description>
        <label>ONE Source Account Role Detail</label>
        <referenceTo>ICG_Account_Role_Detail__c</referenceTo>
        <relationshipLabel>ONE Source Capability Assignment Groups</relationshipLabel>
        <relationshipName>ICG_Capability_Assignment_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ICG_Certification_Label__c</fullName>
        <formula>ICG_Certification__r.Label__c</formula>
        <label>One Source Certification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICG_Certification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Certification</description>
        <label>ONE Source Certification</label>
        <referenceTo>ICG_Certification__c</referenceTo>
        <relationshipLabel>ONE Source Capability Assignment Groups</relationshipLabel>
        <relationshipName>ICG_Capability_Assignment_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IENVA_Scope__c</fullName>
        <description>Contains the scope ienva selected</description>
        <label>IEnvA Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CORE</fullName>
                </value>
                <value>
                    <fullName>MRO</fullName>
                </value>
                <value>
                    <fullName>GH</fullName>
                </value>
                <value>
                    <fullName>CF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to specify if the record is active</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Booked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a group is booked</description>
        <label>Booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to specify if the record is expired</description>
        <label>Is Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <description>Show the issue date of the validation</description>
        <label>Issue Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order Product linked to remote validation</description>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>ONE Source Capability Assignment Groups</relationshipLabel>
        <relationshipName>ICG_Capability_Assignment_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <description>Describe the date when the request is sent</description>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <description>Describe the date when the request is responsed</description>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFOC_Scope__c</fullName>
        <description>Multiselect to display the scope of SFOC records</description>
        <label>SFOC Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Cargo</fullName>
                </value>
                <value>
                    <fullName>Dangerous Goods</fullName>
                </value>
                <value>
                    <fullName>Live Animals</fullName>
                </value>
                <value>
                    <fullName>Pharmaceuticals</fullName>
                </value>
                <value>
                    <fullName>Perishables</fullName>
                </value>
                <value>
                    <fullName>Airmail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Field that shows the status of the certification depending on the expiration date and if a new certification has been created to update this one.</description>
        <formula>IF(Is_Expired__c,&apos;Expired&apos;,IF(Is_Active__c,&apos;Active&apos;,IF(Issue_Date__c &gt; TODAY(),&apos;Upcoming&apos;, &apos;Inactive&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sticker_Id__c</fullName>
        <description>Id of the sticker for some CEIV certifications</description>
        <label>Sticker Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Children__c</fullName>
        <description>Calculates the total amount of children for the group</description>
        <label>Total Children</label>
        <summaryForeignKey>ICG_Account_Role_Capability_Assignment__c.ICG_Capability_Assignment_Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Upcoming_Expiration_Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to keep track of notification sent for upcoming expiration notification</description>
        <label>Upcoming Expiration Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Payment_Date__c</fullName>
        <description>Describe the date when the payment is validated</description>
        <label>Validation Payment Date</label>
        <type>Date</type>
    </fields>
    <label>OS Capability Assignment Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OSC-{0000000}</displayFormat>
        <label>ONE Source Capability Assignment Group</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OS Capability Assignment Groups</pluralLabel>
    <recordTypes>
        <fullName>Certification</fullName>
        <active>true</active>
        <label>Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>No_Certification_Required</fullName>
        <active>true</active>
        <description>No certification required for create new capabilities</description>
        <label>No Certification Required</label>
    </recordTypes>
    <recordTypes>
        <fullName>Remote_Validation</fullName>
        <active>true</active>
        <label>Remote Validation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>